# bde-processor

./: .editorconfig  .gitlint  .kodiak.toml  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: pull-request.yml
